--- a/Notebooks/lab1_empty.ipynb
+++ b/Notebooks/lab1_empty.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-11T09:43:43.571354Z",
@@ -98,83 +98,10 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: datasets~=3.2.0 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (3.2.0)\n",
-      "Requirement already satisfied: filelock in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (3.13.1)\n",
-      "Requirement already satisfied: numpy>=1.17 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (1.26.4)\n",
-      "Requirement already satisfied: pyarrow>=15.0.0 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (16.1.0)\n",
-      "Requirement already satisfied: dill<0.3.9,>=0.3.0 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (0.3.8)\n",
-      "Requirement already satisfied: pandas in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (2.2.2)\n",
-      "Requirement already satisfied: requests>=2.32.2 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (2.32.3)\n",
-      "Requirement already satisfied: tqdm>=4.66.3 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (4.66.5)\n",
-      "Requirement already satisfied: xxhash in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (3.5.0)\n",
-      "Requirement already satisfied: multiprocess<0.70.17 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (0.70.16)\n",
-      "Requirement already satisfied: fsspec<=2024.9.0,>=2023.1.0 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from fsspec[http]<=2024.9.0,>=2023.1.0->datasets~=3.2.0) (2024.6.1)\n",
-      "Requirement already satisfied: aiohttp in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (3.10.5)\n",
-      "Requirement already satisfied: huggingface-hub>=0.23.0 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (0.30.2)\n",
-      "Requirement already satisfied: packaging in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (24.1)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from datasets~=3.2.0) (6.0.1)\n",
-      "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from aiohttp->datasets~=3.2.0) (2.4.0)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from aiohttp->datasets~=3.2.0) (1.2.0)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from aiohttp->datasets~=3.2.0) (23.1.0)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from aiohttp->datasets~=3.2.0) (1.4.0)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from aiohttp->datasets~=3.2.0) (6.0.4)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from aiohttp->datasets~=3.2.0) (1.11.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from huggingface-hub>=0.23.0->datasets~=3.2.0) (4.11.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from requests>=2.32.2->datasets~=3.2.0) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from requests>=2.32.2->datasets~=3.2.0) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from requests>=2.32.2->datasets~=3.2.0) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from requests>=2.32.2->datasets~=3.2.0) (2025.1.31)\n",
-      "Requirement already satisfied: colorama in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from tqdm>=4.66.3->datasets~=3.2.0) (0.4.6)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from pandas->datasets~=3.2.0) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from pandas->datasets~=3.2.0) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from pandas->datasets~=3.2.0) (2023.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas->datasets~=3.2.0) (1.16.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution ~atplotlib (C:\\Users\\Rayan\\anaconda3\\Lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~atplotlib (C:\\Users\\Rayan\\anaconda3\\Lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~atplotlib (C:\\Users\\Rayan\\anaconda3\\Lib\\site-packages)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: matplotlib in c:\\users\\rayan\\anaconda3\\lib\\site-packages (3.10.1)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from matplotlib) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from matplotlib) (4.51.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from matplotlib) (1.4.4)\n",
-      "Requirement already satisfied: numpy>=1.23 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from matplotlib) (1.26.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from matplotlib) (24.1)\n",
-      "Requirement already satisfied: pillow>=8 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from matplotlib) (10.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from matplotlib) (3.1.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from matplotlib) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\rayan\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution ~atplotlib (C:\\Users\\Rayan\\anaconda3\\Lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~atplotlib (C:\\Users\\Rayan\\anaconda3\\Lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~atplotlib (C:\\Users\\Rayan\\anaconda3\\Lib\\site-packages)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! pip install -U datasets~=3.2.0\n",
-    "! python -m pip install -U matplotlib"
+    "#! pip install -U datasets~=3.2.0\n",
+    "#! python -m pip install -U matplotlib"
    ]
   },
   {
