--- a/Notebooks/lab2_empty.ipynb
+++ b/Notebooks/lab2_empty.ipynb
@@ -101,21 +101,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "id": "rhEG8hKrpSOE",
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2025-04-11T14:25:34.673997Z",
+     "start_time": "2025-04-11T14:25:34.669922Z"
     }
    },
-   "outputs": [],
    "source": [
     "# ! pip install -U datasets~=3.5.0\n",
     "# ! pip install -U gensim\n",
     "# ! python -m pip install -U matplotlib\n",
     "# ! pip install nltk\n",
     "# ! pip install -U scikit-learn"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -131,8 +135,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "# ! pip install --upgrade --force-reinstall datasets"
    ],
@@ -140,8 +142,14 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2025-04-11T14:25:35.719709Z",
+     "start_time": "2025-04-11T14:25:35.716014Z"
     }
-   }
+   },
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -158,14 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "id": "CRe8W4hKpSOF",
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2025-04-11T14:25:51.237964Z",
+     "start_time": "2025-04-11T14:25:35.943293Z"
     }
    },
-   "outputs": [],
    "source": [
     "import re\n",
     "\n",
@@ -177,7 +187,29 @@
     "import gensim\n",
     "\n",
     "nltk.download('punkt_tab')"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     C:\\Users\\tahai\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers\\punkt_tab.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -226,18 +258,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "id": "tay2NXPTpSOG",
     "pycharm": {
      "name": "#%%\n"
+    },
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-04-11T14:25:51.536539Z"
     }
    },
-   "outputs": [],
    "source": [
     "ds = datasets.load_dataset('embedding-data/sentence-compression')\n",
     "print(ds)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -2322,8 +2360,7 @@
     "\n",
     "Discuss the results.\n",
     "Comment on how recall changes based on the value of $K$. Are the results expected or surprising?"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
