some exercises uwu

--- a/Notebooks/lab3_empty.ipynb
+++ b/Notebooks/lab3_empty.ipynb
@@ -1743,7 +1743,6 @@
    },
    "source": [
     "### YOUR CODE HERE\n",
-    "~~~~\n",
     "\n",
     "\n",
     "\n",
@@ -1818,6 +1817,10 @@
     "    hidden_states = model_output['hidden_states'][layer]\n",
     "\n",
     "    ### YOUR CODE HERE\n",
+    "\n",
+    "    mask_bool  = attention_mask.bool()\n",
+    "    selected_hidden_states = hidden_states[mask_bool]\n",
+    "    \n",
     "\n",
     "    \n",
     "\n",
