--- a/Notebooks/lab3_empty.ipynb
+++ b/Notebooks/lab3_empty.ipynb
@@ -4514,7 +4514,7 @@
       },
       "source": [
         "#### YOUR CODE HERE\n",
-        "# We chose MiniLM as the second model. We thought it would be interesting to compare the performance of a much smaller model, compared to the bigger models (Like BERT) and evaluate if the trade-off of recall is worth it compared to the computational performance gain.\n",
+        "# We chose MiniLM as the second model. We thought it would be interesting to compare the performance of a much smaller model, compared to the bigger models (Like BERT)\n",
         "model_2_name = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
         "tokenizer2 = transformers.AutoTokenizer.from_pretrained(model_2_name)\n",
         "model2 = transformers.AutoModel.from_pretrained(model_2_name)\n",
@@ -4958,7 +4958,7 @@
       "cell_type": "markdown",
       "source": [
         "From the output, we can clearly see MiniLM dramatically outperforms even BERTs best embedding strategies. When using the same embedding strategy the performance difference becomes even more obvious.\n",
-        "MiniLM shows a strong ability in sentence embedding, while offering good performance. This is achieved through a process called Knowledge distillation. In this case, a larger teahcer model (BERT) acts as the teacher, and the student model (MiniLM) learns from it. The student focusses on replicating key internal workings of the teacher while specifically focussing on the self attention distribution, and more crucially the value.relations (relationship between value vectors in the attentionmechanism)"
+        "MiniLM shows a strong ability in sentence embedding, while offering good performance. This is achieved through a process called Knowledge distillation. In this case, a larger teahcer model (BERT) acts as the teacher, and the student model (MiniLM) learns from it. The student focusses on replicating key internal workings of the teacher while specifically focussing on the self attention distribution, and more crucially the value relations (relationship between value vectors in the attentionmechanism). More information can be found in the report."
       ],
       "metadata": {
         "id": "SvwZJ_QaVGIJ"
